<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Past_past_paper">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit_past_paper"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/editText22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="91dp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="334dp" />

    <EditText
        android:id="@+id/editText24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="195dp" />

    <EditText
        android:id="@+id/editText25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="256dp" />

    <EditText
        android:id="@+id/editText26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="317dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduleCode"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="211dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/editText23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="144dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="516dp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="525dp" />
</androidx.constraintlayout.widget.ConstraintLayout>