<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insert_P_Paper">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_insert_past_papers"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduleCode"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="257dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="309dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="366dp" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="196dp" />

    <EditText
        android:id="@+id/editText19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="312dp" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="376dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChooseFile"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="453dp" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="528dp" />

</androidx.constraintlayout.widget.ConstraintLayout>