<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPastPapers">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pastPapers"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/PPyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduleCode"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="236dp" />

    <EditText
        android:id="@+id/ppmcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="167dp" />

    <EditText
        android:id="@+id/ppfaculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="234dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_insertpaper"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="526dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_EditPaper"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="522dp" />
</androidx.constraintlayout.widget.ConstraintLayout>